project/vpc.tf
# создаем VPC

resource "aws_vpc" "vpc" {
  cidr_block = "192.168.0.0/16"
  tags = {
    Name = "${var.project_name}"
  }
}
